@@ -1,14 +1,14 @@
-
 Goals for next release:
 -----------------------
-* Check object method calls for # args
-* Store types of globals, class attributes, function & method return values
 * Improve handling when importing packages
-* Add original line warnings for those that refer to another place
-	(e.g., overridden method doesn't match signature)
+* Check object method calls for # args
 
 Longer Term goals:
 ------------------
+* Check object method calls for # args for builtin type methods
+* Store types of globals, class attributes, function & method return values
+* Add original line warnings for those that refer to another place
+	(e.g., overridden method doesn't match signature)
 * Add capability to check features from a specified version of python
 	which is different from runtime interpreter
 * Security checks for known issues.  Adrian Likins @redhat recommends 
@@ -27,14 +27,4 @@ Longer Term goals:
 * Allow import checker to catch errors, rather than starting checker.py
 * Find lines that end w/semi-colons (;)
 * Spell check doc strings
-
-Eric's code review:
-
-* Fix (for i in list: if i in other_list: continue) by using filter func
-	(need to fix warn.py:find()/blacklist)
-* would it be simpler to treat self.f() as f(self)?
-* warn.py: _addWarning can be removed by using list flattening?
-* checker.py:  use one list for warnings (remove importWarnings)?
-* Consider i18n for cfg strings, warnings, etc.
-* use %(name)s expansion for warnings
 
