@@ -9,3 +9,7 @@ x = filter(lambda f, p = bfp : fnmatch.fnmatch(f, p), x)
 def y():
     print x
 
+def d(lines):
+    import string
+    lines = map(lambda s: string.strip(s), lines)
+
